--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,10 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
 
-body{
-    font-family: 'Quicksand';
+body {
+  font-family: 'Quicksand';
 }
 
 @import 'components/loader';
+@import 'antd/dist/reset.css';
