Banner page design

--- a/src/styles/components/_typewriter.scss
+++ b/src/styles/components/_typewriter.scss
@@ -1,5 +1,5 @@
 .typewriter {
-  width: 21ch;
+  width: 410px  ;
   animation: typing 2s steps(24), blink .5s step-end infinite alternate;
   font-family: 'Kaushan Script', cursive;
   white-space: nowrap;
