--- a/src/styles/components/_typewriter.scss
+++ b/src/styles/components/_typewriter.scss
@@ -1,7 +1,7 @@
 .typewriter {
   width: 410px  ;
   animation: typing 2s steps(24), blink .5s step-end infinite alternate;
-  font-family: 'Kaushan Script', cursive;
+  font-family: 'Stylish', sans-serif;
   white-space: nowrap;
   overflow: hidden;
   border-right: 3px solid;
